--- a/app.json
+++ b/app.json
@@ -10,14 +10,9 @@
          "Vegeta"
       ],   
    "repository": "https://github.com/ctzfamily/vegetarobot",
-   "addons": [
-      {
-         "options": {
-            "version": "12"
-         },
-         "plan": "heroku-postgresql"
-      }
-   ],
+"addons": [
+  "heroku-postgresql:mini"
+],
    "env": {
       "TOKEN": {
          "description": "Your bot token. Get one from @BotFather duh",
